--- a/assets/event.html
+++ b/assets/event.html
@@ -65,7 +65,11 @@
         color:white;
         margin-left:1%;
       }
-
+    @media (max-width:550px){
+        h3{
+       text-align:center;
+} 
+}
         .jumbotron {
             background-color: white;
             color: blue;
